# SFRT

./: .gitignore  ARCHITECTURE_PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml
src/vhee_topas_unified/: __init__.py  __main__.py  cli.py  legacy.py
src/vhee_topas_unified/assets/: __init__.py
src/vhee_topas_unified/assets/topas/: headneck_voxel_lattice_template.txt
src/vhee_topas_unified/biology/: __init__.py  common.py  constants.py  emission.py  pde.py  sinks.py  survival.py
src/vhee_topas_unified/io/: __init__.py  spectrum.py  topas_case.py  topas_grid.py
src/vhee_topas_unified/metrics/: __init__.py  dvh.py  structures.py
src/vhee_topas_unified/phantom/: __init__.py  common.py  detailed_headneck.py  materials.py  simple_headneck.py
src/vhee_topas_unified/planning/: __init__.py  lattice.py  source_plan.py
src/vhee_topas_unified/workflows/: __init__.py  common.py  detailed_phantom.py  material_phantom.py  plan_preview.py  simple_physical.py
tests/: test_cli_and_workflows.py  test_io.py  test_phantom.py  test_planning.py
