[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vhee-topas-unified"
version = "0.1.0"
description = "Unified SFRT planning and biology package extracted from the vhee_topas research codebase."
requires-python = ">=3.10"
readme = "README.md"
dependencies = [
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = []

[project.scripts]
vhee-topas-unified = "vhee_topas_unified.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
vhee_topas_unified = [
    "assets/data/*.csv",
    "assets/topas/*.txt",
]
